[gd_scene load_steps=5 format=3 uid="uid://b424ds7vcv2xv"]

[ext_resource type="FontFile" uid="uid://b24wwa76uyeom" path="res://fonts/Xolonium-Regular.ttf" id="1_df63j"]
[ext_resource type="Script" path="res://Hud.gd" id="1_l2kfh"]

[sub_resource type="InputEventAction" id="InputEventAction_v653f"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_jkxaa"]
events = [SubResource("InputEventAction_v653f")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_l2kfh")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -232.0
offset_top = 16.0
offset_right = 16.0
offset_bottom = 97.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_df63j")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 3

[node name="ScoreMultiplierLabel" type="Label" parent="."]
offset_top = 81.0
offset_right = 248.0
offset_bottom = 133.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_df63j")
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 3

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -121.5
offset_right = 240.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_df63j")
theme_override_font_sizes/font_size = 64
text = "BOMB DODGER ULTRA 9001"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -192.0
offset_right = 96.0
offset_bottom = -106.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_df63j")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_jkxaa")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreInfo" type="Label" parent="."]
offset_left = 8.0
offset_right = 51.0
offset_bottom = 26.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
text = "Score"

[node name="ScoreMultiplierInfo" type="Label" parent="."]
offset_left = 8.0
offset_top = 120.0
offset_right = 65.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12
text = "Additional Score Gain Multiplier Value"

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
